--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.3.7",
+    "@mantine/dates": "^7.17.8",
     "@mantine/hooks": "^8.3.7",
+    "@mantine/modals": "^8.3.9",
     "@mantine/notifications": "^8.3.7",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "mantine-react-table": "^2.0.0-beta.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.1",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
