--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,10 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/mixify_fe:latest .
+          docker build \
+            --build-arg VITE_ENVOY_API_URL=${{ secrets.VITE_ENVOY_API_URL }} \
+            --build-arg VITE_TELEGRAM_BOT_USERNAME=${{ secrets.VITE_TELEGRAM_BOT_USERNAME }} \
+            -t ${{ secrets.DOCKER_USERNAME }}/mixify_fe:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/mixify_fe:latest
 
       - name: Setup SSH key
