upd docker compose comand

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_ENVOY_API_URL=https://carey-biunique-gianni.ngrok-free.dev
 VITE_ENVOY_API_URL=http://localhost:3000
 VITE_TELEGRAM_BOT_USERNAME=mixifycup_bot
+VITE_NODE_ENV=development
