--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,20 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@widgets/*": ["./src/widgets/*"],
+      "@features/*": ["./src/features/*"],
+      "@entities/*": ["./src/entities/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@config/*": ["./config/*"],
+      "@public/*": ["./public/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
