--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.25",
     "mantine-react-table": "^2.0.0-beta.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -52,5 +53,6 @@
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
     "vite-plugin-ngrok": "^1.1.2"
-  }
+  },
+  "packageManager": "yarn@4.11.0+sha512.4e54aeace9141df2f0177c266b05ec50dc044638157dae128c471ba65994ac802122d7ab35bcd9e81641228b7dcf24867d28e750e0bcae8a05277d600008ad54"
 }
