add static route

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 VITE_ENVOY_API_URL=http://localhost:8000
 VITE_TELEGRAM_BOT_USERNAME=mixifycup_bot
 VITE_NODE_ENV=development
+VITE_STATIC=http://localhost
